# Chassis

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  install.sh
.github/workflows/: release.yml
agents/: camper.js  circler.js  ml_agent.js  rusher.js  snake_bot.js  sniper.js
src/: auth.rs  battle.rs  bomberman.rs  db.rs  main.rs  physics.rs  sandbox.rs  snake.rs
src/server/: mod.rs
src/server/routes/: admin.rs  agent.rs  auth.rs  battle.rs  bomberman.rs  mod.rs  play.rs  snake.rs  tank.rs
web/: package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/achievements/: page.tsx
web/src/app/admin/: page.tsx
web/src/app/agent-guide/: copy-button.tsx  page.tsx
web/src/app/bomberman/: layout.tsx  page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/login/: layout.tsx  page.tsx
web/src/app/matches/: page.tsx
web/src/app/models/: page.tsx
web/src/app/play/: page.tsx
web/src/app/race/: page.tsx
web/src/app/register/: layout.tsx  page.tsx
web/src/app/settings/: layout.tsx  page.tsx
web/src/app/shop/: layout.tsx  page.tsx
web/src/app/snake/: layout.tsx  page.tsx
web/src/app/stats/: page.tsx
web/src/app/tankbook/: page.tsx
web/src/app/tanks/: layout.tsx  page.tsx
web/src/app/tournament/: layout.tsx  page.tsx
web/src/app/verify-email-sent/: page.tsx
web/src/components/: GameArenaPage.tsx  ThreeArenaView.tsx  navbar.tsx
web/src/lib/: cookie.ts  elo.ts
(+12 files in other folders)
