[package]
name = "deeptank"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deeptank"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.6", features = ["macro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 服务器
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# 认证
argon2 = "0.5"
jsonwebtoken = "9"

# HTTP 客户端（调 DeepSeek）
reqwest = { version = "0.12", features = ["json"] }
